--- a/template/museumMap.html
+++ b/template/museumMap.html
@@ -2,10 +2,10 @@
     <a ui-sref="home">首页</a><u>&gt;&gt;</u><span>博物馆导览</span>
 </p>
 <div class="museum-map">
-    <svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+    <svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg"x="0px" y="0px"
 	 width="1033px" height="643px" viewBox="0 0 1033 643" enable-background="new 0 0 1033 643" xml:space="preserve">
     <g>
-	<path id="path0" stroke="#FFFFFF" stroke-miterlimit="10" d="M273.034,294.364
+	<path id="path14" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M273.034,294.364
 		c-0.922-1.185-0.922-4.216,0.264-5.533c1.317-1.317,1.186-2.765,1.186-4.348c0-1.581,0.132-2.765,3.294-3.953
 		c3.163-1.185,2.898-5.663,5.929-7.246c2.898-1.448,6.324-3.953,8.037-5.534c1.581-1.581,2.503-5.666,1.581-6.983
 		c-0.791-1.317,2.24-2.898,4.743-3.82c2.503-0.791,6.72-3.952,9.75-4.348c3.163-0.526,1.186-5.533,1.186-8.168
@@ -38,7 +38,7 @@
 		c-0.131,1.976-4.611,11.857-4.611,16.733c0,4.876,1.054,18.182,0.922,23.322c-0.132,5.138-1.45,16.074,0.922,18.18
 		c2.372,2.242,3.163,5.007,5.666,5.929c2.503,0.924,4.216,2.505,4.348,5.402c0.131,2.109,1.186,4.612,1.713,5.929
 		c2.239-1.186,6.323-3.294,8.827-4.084C274.219,298.712,273.956,295.55,273.034,294.364z"/>
-	<path id="path1" stroke="#FFFFFF" stroke-miterlimit="10" d="M215.326,340.74c0.659-0.924,0.395-3.822,4.611-3.293
+	<path id="path15" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M215.326,340.74c0.659-0.924,0.395-3.822,4.611-3.293
 		c4.215,0.525,2.635-0.395,6.324-4.084c3.688-3.689,6.455-6.982,7.246-9.617c0.791-2.637,3.953-4.742,6.456-5.668
 		c2.503-0.92,7.51-3.422,10.276-3.422c2.767,0,5.139-2.635,7.115-3.689c1.977-1.054,4.875-6.456,4.875-6.456
 		s-1.977-3.953-2.24-6.854c-0.131-2.898-1.844-4.479-4.348-5.399c-2.503-0.92-3.293-3.689-5.665-5.929
@@ -61,7 +61,7 @@
 		c1.845-1.713,6.456-1.053,10.146-1.053c3.689,0,4.479-5.271,6.061-6.721c1.713-1.58,3.426,0.66,6.324,0.66s3.821-3.295,5.271-5.932
 		c1.448-2.502,10.672-3.818,13.57-3.818c2.899,0.129,4.48-0.658,8.037-1.318c3.558-0.658,8.564-3.953,10.277-5.008
 		c1.713-1.053,5.27-4.082,6.587-4.742c0.659-0.264,1.055-0.527,1.317-0.264C208.475,345.746,214.799,341.531,215.326,340.74z"/>
-	<path id="path2" stroke="#FFFFFF" stroke-miterlimit="10" d="M358.805,473.811c-2.371-0.658-3.82,0.527-2.371,2.24
+	<path id="path4" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M358.805,473.811c-2.371-0.658-3.82,0.527-2.371,2.24
 		c1.448,1.58,0.264,2.898-1.582,2.373c-1.844-0.66-2.24-0.926-3.425,1.316c-1.318,2.24-2.373,3.424-5.402,3.293
 		c-3.03-0.131-5.534,0.789-8.959,3.027c-3.425,2.242-7.378,2.508-10.672,2.508s-5.138,1.713-8.564,4.74
 		c-3.293,3.029-6.719,2.373-9.75,0.529c-3.03-1.848-4.216-0.791-5.533,0.527c-1.318,1.316-2.899,1.316-5.402,0.131
@@ -77,7 +77,7 @@
 		c-2.24-1.186-1.977-3.557-1.845-7.115c0.132-3.559-4.479-3.688-6.72-4.742c-2.105-1.053-2.105-2.635-2.105-4.744
 		c0-2.105-4.085-3.953-7.511-4.875c-3.558-0.922-3.163-3.557-3.558-6.85c-0.13-1.449,0.265-2.768,1.053-4.084
 		c-1.053-0.789-3.162-2.107-5.401-3.689C365.261,474.471,361.176,474.471,358.805,473.811z"/>
-	<path id="path3" stroke="#FFFFFF" stroke-miterlimit="10" d="M1018.096,139.687
+	<path id="path10" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M1018.096,139.687
 		c-3.293-3.558-3.03,0.791-4.086-0.792c-1.051-1.581-1.051-0.788-4.081,0.266c-3.03,1.051-5.929,4.083-8.696,4.345
 		c-2.767,0.266-4.348-2.369-4.083,0c0.264,2.372,1.054,4.085-2.766,3.03c-3.821-1.054-3.822-1.844-1.318-4.348
 		c2.504-2.369,0.79-2.765-4.61-1.052c-5.402,1.581-13.835,1.052-18.183-0.791c-4.348-1.843-1.846-3.557-4.874-5.139
@@ -125,7 +125,7 @@
 		c0.528,0.922,0.79,1.977,2.635,1.977c1.714,0,2.108-2.24,0.791-2.503c-1.449-0.263-3.559-0.791-3.559-2.506
 		c0-1.71,0.657-1.71,3.293-2.105c2.635-0.529,5.666-2.899,6.983-3.953c1.317-1.054,3.425-0.264,3.953,1.317
 		c0.527,1.448,1.711-1.188,2.503-1.712C1020.863,142.98,1021.39,143.112,1018.096,139.687z"/>
-	<path id="path4" stroke="#FFFFFF" stroke-miterlimit="10" d="M812.034,280.662c-0.659-1.45-1.053,1.713-4.216,2.635
+	<path id="path2" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M812.034,280.662c-0.659-1.45-1.053,1.713-4.216,2.635
 		c-3.161,0.922-0.526-1.714-1.713-4.216c-1.187-2.506-2.765,2.371-4.216,2.105c-1.58-0.129-1.712-2.105-1.186-3.687
 		c0.526-1.583-1.714-3.165-3.823-4.482c-2.105-1.317-5.664,2.506-6.455,6.984c-0.791,4.479-2.899,1.317-6.063-0.792
 		c-3.161-2.105,0.396-1.581,0.396-3.686c-0.396-0.396-1.317-1.45-1.845-2.372c-0.79-1.188-7.512,3.03-10.276,5.665
@@ -182,7 +182,7 @@
 		c2.635,1.976,3.427,0.263,3.294-1.581c-0.13-1.846,0-3.689,1.317-4.217s0.529-2.635-0.922-3.952
 		c-1.452-1.318-0.791-3.294,1.976-3.559c2.766-0.264,3.82,2.9,5.139,0.132c1.316-2.768-1.318-3.163-1.318-6.192
 		c0-2.899,0.791-3.426,2.768-4.481C813.614,283.034,812.693,282.111,812.034,280.662z"/>
-	<path id="path5" stroke="#FFFFFF" stroke-miterlimit="10" d="M623.364,401.611
+	<path id="path11" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M623.364,401.611
 		c-3.557,1.055-4.741,1.844-5.534,3.293c-0.79,1.58-3.162,1.186-3.425-1.846c-0.264-2.9-2.105-15.545-7.64-14.887
 		c-5.535,0.658-9.882,0.789-11.595,1.709c-1.713,0.926-8.037-2.896-8.827-4.344c-0.791-1.451,5.93-2.109,4.479-8.959
 		c-1.45-6.852-4.216-4.217-5.402-3.426c-1.186,0.791-7.246,3.029-10.408,1.713c-3.161-1.318-7.114-1.846-7.247-6.721
@@ -204,7 +204,7 @@
 		s0.394-2.898,0.659-6.588c-0.133,0-8.037-2.502-11.069-2.502c-3.033,0-4.875-3.953-4.082-7.117
 		c0.788-3.162-0.267-6.852-0.396-8.828c-0.132-1.447-0.263-4.082,0.264-5.006c-0.658-0.66-1.976-2.105-3.161-4.217
 		C627.316,405.301,626.922,400.557,623.364,401.611z"/>
-	<path id="path6" stroke="#FFFFFF" stroke-miterlimit="10" d="M571.322,354.313
+	<path id="path13" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M571.322,354.313
 		c-3.953-2.371-11.595-3.297-13.176-1.053c-1.582,2.24-4.874,3.953-7.51,2.369c-2.635-1.711-2.768-8.17-3.425-11.199
 		c-0.66-2.898-5.534-7.51-7.512-6.059c-1.976,1.447-1.446,7.375-4.348,7.246c-2.897-0.131-11.725-3.031-14.36,0.264
 		c-2.767,3.293-5.533,2.371-5.665,6.193c-0.129,3.822-3.557,6.322-3.688,7.246c-0.265,0.922,6.322,5.799,1.448,6.586
@@ -241,7 +241,7 @@
 		c-4.217-0.393-2.109-9.75-1.977-12.121c0.129-2.504-1.055-6.852,1.581-8.828c2.635-1.844,2.635-5.666,2.635-7.641
 		c0-1.846,4.216-3.295,5.666-5.93c1.447-2.635,4.348-1.58,6.455-2.105c2.107-0.396,3.823-1.713,3.689-4.877
 		c-0.133-3.027,6.85-4.346,8.3-4.875c0.922-0.264,2.24-0.787,3.03,0.529C568.159,364.191,575.144,356.553,571.322,354.313z"/>
-	<path id="path7" stroke="#FFFFFF" stroke-miterlimit="10" d="M378.04,410.438c-1.712,0.66-3.688,0.133-4.874-1.713
+	<path id="path8" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M378.04,410.438c-1.712,0.66-3.688,0.133-4.874-1.713
 		c-1.186-1.844-2.24-4.348-4.348-4.348c-1.977,0-6.719-6.059-8.696-4.082c-1.976,1.977-5.534,7.643-7.377,6.324
 		c-1.845-1.316-7.247-4.219-12.253-3.031c-5.007,1.055-18.313-6.85-22.267-4.873c-4.084,1.975-5.006,6.191-8.036,6.191
 		c-3.031,0-3.821,2.105-4.349,4.479c-0.526,2.24-1.712,3.953-4.875,4.482c-3.03,0.527-5.929,1.447-7.377,3.424
@@ -280,7 +280,7 @@
 		c-1.847-1.316-2.506-2.504-1.188-3.82c1.188-1.318,2.243-1.713,2.372-5.666c0.132-3.953-1.318-4.482-4.479-5.533
 		c-3.162-1.188-0.132-5.402,1.581-8.563c1.713-3.166,4.216-5.539,5.271-5.271c1.186,0.264,5.797,1.318,9.091,0.129
 		c2.505-0.92,3.689-7.641,4.877-13.176c-1.977-2.635-7.117-9.484-9.223-12.645C381.202,409.646,379.753,409.779,378.04,410.438z"/>
-	<path id="path8" stroke="#FFFFFF" stroke-miterlimit="10" d="M239.437,551.148c0.527-3.162,1.712-5.141,2.767-7.244
+	<path id="path17" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M239.437,551.148c0.527-3.162,1.712-5.141,2.767-7.244
 		c-2.24-0.924-8.037-2.506-10.937-2.768c-3.425-0.264-3.952-1.447-5.401-3.82c-1.449-2.373-6.061-1.713-7.642-3.689
 		s-2.767-3.031-6.192-3.689c-3.426-0.527-4.084-4.082-5.797-6.717c-1.712-2.635,1.449-7.514,3.294-9.752s1.977-4.082,1.186-5.93
 		c-0.659-1.844,0.263-3.293,3.162-5.008c2.899-1.709,3.031-6.85,4.612-8.563c1.58-1.711,0.659-3.686,1.186-10.541
@@ -313,7 +313,7 @@
 		c1.977,1.584,3.163,0.268,5.139-0.787c2.108-1.055,5.402,0,7.509,1.713c2.108,1.711,3.821-4.086,5.402-6.324
 		c1.582-2.24,6.062-2.635,10.014-4.875c3.952-2.109,1.844-13.045,1.185-14.625c-0.658-1.58-0.526-3.82,2.636-4.215
 		C240.096,558.66,238.646,555.629,239.437,551.148z"/>
-	<path id="path9" stroke="#FFFFFF" stroke-miterlimit="10" d="M223.231,351.281c-1.186,2.504-3.03,9.615-0.396,9.092
+	<path id="path1" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M223.231,351.281c-1.186,2.504-3.03,9.615-0.396,9.092
 		c2.504-0.529,7.51,2.107,8.564,0.262c1.187-1.975,7.51-8.168,10.277-8.959c2.767-0.66,4.348-0.264,6.061,1.584
 		c1.581,1.977,1.186,2.502,4.084,2.502c3.03,0,3.03,0.395,4.611,1.582c1.582,1.188,5.139-1.055,5.403-3.031
 		c0.264-2.105,4.216-4.873,3.688-8.033c-0.527-3.166-1.186-3.953-3.82-4.219c-2.635-0.264-4.612-4.609-6.719-4.742
@@ -345,7 +345,7 @@
 		c-1.976,1.052-4.348,3.687-7.114,3.687c-2.767,0-7.774,2.506-10.277,3.426c-2.503,0.92-5.666,3.029-6.457,5.664
 		c-0.79,2.637-3.557,5.93-7.246,9.619c-2.767,2.766-2.503,3.953-4.084,4.217c0,1.844,0,5.398,0,7.773
 		C222.177,348.91,224.417,348.777,223.231,351.281z"/>
-	<path id="path10" stroke="#FFFFFF" stroke-miterlimit="10" d="M365.919,310.043
+	<path id="path12" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M365.919,310.043
 		c1.977,1.844,2.898,2.765,2.898,5.797c0,3.033,0.791,7.51,2.24,9.881c1.45,2.373,0.923,4.482-0.527,6.459s-1.581,4.479,1.317,4.873
 		c2.898,0.264,5.4-0.791,6.192,2.24c0.793,3.031,4.875,1.186,2.768,3.689c-2.108,2.635-1.449,5.664-1.583,9.092
 		c-0.129,3.426,0.529,2.766,2.901,1.975c2.369-0.787,6.851,1.451,7.905-0.787c1.186-2.242,2.635,0.922,3.82,2.898
@@ -356,7 +356,7 @@
 		c-2.108-2.372-4.48-4.875-5.139-7.776c-2.766,1.054-6.718,0.396-8.563-1.844c-2.241-2.768-4.743,2.635-8.434,5.27
 		c-3.557,2.767-6.059,3.294-8.958,2.108c-2.899-1.188-3.03-0.924-3.03,1.317c0,2.24-5.005,2.635-6.852,2.635
 		c-1.844,0-5.269,2.24-7.376,4.48c-1.449,1.581-2.635,0.659-3.558-1.45C364.866,300.688,364.338,308.593,365.919,310.043z"/>
-	<path id="path11" stroke="#FFFFFF" stroke-miterlimit="10" d="M444.708,373.283
+	<path id="path9" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M444.708,373.283
 		c-1.318,0.131-6.458,0.66-7.906-0.922c-1.449-1.582-2.766-5.664-4.743-5.006s-3.557,1.58-5.534-0.531
 		c-1.054-1.049-2.372-2.238-3.293-3.422c-1.188,0.129-3.165,0.264-4.349,0.395c-1.844,0.131-12.253,0.924-15.547-2.242
 		c-3.294-3.293-7.905-3.422-9.222-5.398c-1.318-1.977-2.765-5.141-3.821-2.898c-1.188,2.238-5.534,0-7.905,0.787
@@ -387,7 +387,7 @@
 		c3.559,1.055,5.929,0.396,6.458-1.316c0.395-1.846,2.898-2.105,5.796-4.215c2.767-1.979,0.132-10.146,0.132-13.439
 		c0-3.295,1.713-2.9,4.082-3.557c2.372-0.66,4.348-1.979,5.929-3.953c1.583-1.979,3.689,1.58,7.246,1.318
 		c3.56-0.266,5.929-8.436,6.061-10.279c0-0.656,0.396-1.053,0.922-1.449C445.63,376.445,445.63,373.152,444.708,373.283z"/>
-	<path id="path12" stroke="#FFFFFF" stroke-miterlimit="10" d="M509.53,359.449
+	<path id="path3" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M509.53,359.449
 		c-1.713-0.395-3.294-5.141-4.611-8.564c-1.188-3.426-3.689-4.609-6.72-5.006c-3.031-0.395-8.433-8.432-11.462-9.881
 		c-3.162-1.449-4.216-5.402-2.768-7.904c1.583-2.504,0.659-5.535-1.71-7.381c-2.372-1.842-1.847-3.82-5.537-7.245
 		c-3.686-3.423-3.423-9.75-3.423-13.964s-3.294-6.324-4.482-15.415c-1.185-9.094,5.402-7.905,3.953-14.759
@@ -413,7 +413,7 @@
 		c2.899-0.133,5.929-5.27,8.564-8.17c2.635-2.898,4.349,5.006,5.929,6.588c1.449,1.582,4.482-1.186,7.775-1.186
 		c3.294,0,1.978-3.822-0.396-6.982c-2.371-3.162-1.448-3.953,3.426-4.742c4.479-0.791-0.924-5.141-1.449-6.324
 		C510.979,359.582,510.32,359.713,509.53,359.449z"/>
-	<path id="path13" stroke="#FFFFFF" stroke-miterlimit="10" d="M689.636,290.016
+	<path id="path7" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M689.636,290.016
 		c-4.348-4.084-12.384-1.846-14.229-3.822c-1.844-1.844-6.455-1.447-8.432-1.447c-2.108,0-22.793-11.465-26.351-18.182
 		c-3.558-6.719-3.824-8.434-7.379-12.649c-3.557-4.082,2.239-7.114,5.271-14.097c3.029-6.982,1.188-14.097,0-18.05
 		c-0.79-2.767,0.395-5.665,1.316-8.168c0.396-0.924,0.659-1.847,0.923-2.767c0.528-3.031-1.318-4.479-2.898-4.744
@@ -444,7 +444,7 @@
 		c3.951-0.264,2.764-4.082,1.316-6.455c-1.448-2.238,0.527-5.139,1.581-8.959c1.054-3.822,5.403-5.666,7.116-6.059
 		c1.712-0.396,2.107-4.611,1.712-6.324s-0.527-4.743,2.239-4.743c2.9,0,3.953-3.821,2.9-6.718c-1.188-2.901,5.005-3.689,8.828-6.061
 		C696.618,296.34,693.983,294.101,689.636,290.016z"/>
-	<path id="path14" stroke="#FFFFFF" stroke-miterlimit="10" d="M577.779,85.931
+	<path id="path5" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M577.779,85.931
 		c-2.636-0.659-2.242-2.371-3.561-5.402c-1.187-3.03-1.447-3.953-1.581-8.037c-0.13-4.215-2.898-3.425-5.139-4.479
 		c-2.238-1.053-6.458-1.581-7.509-5.27c-1.055-3.688-2.373-5.797-3.03-11.199c-0.53-5.402-2.635-4.084-5.666-6.456
 		c-3.03-2.372-4.216-1.845-6.851,0.659c-2.636,2.503-2.372-1.317-0.791-3.162c1.58-1.713-1.187-1.581-5.007-2.372
@@ -475,7 +475,7 @@
 		c-3.557,0,2.109-4.348,2.109-6.192c0-1.844,1.58-4.875,4.349-6.719c2.764-1.845,3.027-1.582,0.787-4.348
 		c-2.105-2.767,7.643,0.527,7.905-1.318c0.265-1.844,0.265-5.928,4.085-9.222c3.819-3.294,5.929-5.402,5.929-7.51
 		C584.366,89.225,580.545,86.59,577.779,85.931z"/>
-	<path id="path15" stroke="#FFFFFF" stroke-miterlimit="10" d="M491.084,205.037
+	<path id="path16" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M491.084,205.037
 		c-1.449-4.219-3.164-5.929-1.188-9.881c1.976-3.824,4.084-5.8,3.294-10.936c-0.659-5.141,1.054-11.99-1.711-13.571
 		c-2.767-1.581-4.348-3.821-4.743-7.773c-0.396-3.823-2.503-3.164-3.689-3.689c-1.185-0.53,0.132-2.372-1.844-1.317
 		c-1.976,1.054-3.557,2.24-3.688-0.133c-0.133-2.371-0.659-3.557-1.977-3.161c-1.318,0.396-8.301,4.611-9.355,3.161
@@ -522,7 +522,7 @@
 		c1.054,3.689,0,13.702,0,16.732c0,3.031,1.844,4.479,4.875,4.611c3.164,0.132,2.504,4.348,2.24,8.696
 		c-0.263,4.346,3.294,5.663,5.007,7.51c1.712,1.714,7.246-1.581,11.069-2.505c0.923-0.264,1.582,0,2.107,0.396
 		C482.651,214.522,492.402,208.989,491.084,205.037z"/>
-	<path id="path16" stroke="#FFFFFF" stroke-miterlimit="10" d="M760.783,63.402c0,0-1.318-1.977-0.528-2.24
+	<path id="path6" ng-click="changeCity($event)" stroke="#FFFFFF" stroke-miterlimit="10" d="M760.783,63.402c0,0-1.318-1.977-0.528-2.24
 		c0.789-0.264,3.424-1.449,3.558,0.791c0.131,2.24,0.264,3.688-1.188,3.03C761.178,64.192,760.783,63.402,760.783,63.402
 		L760.783,63.402z M778.833,73.679c-0.263,0-3.689-1.845-3.558-3.031c0.131-1.186-0.263-5.138,0.79-6.06
 		c1.053-0.791,1.71-0.527,2.24,0.527c0.527,1.055,1.845,4.216,2.105,6.061c0.267,1.713,0.396,3.426-0.525,3.294
@@ -601,58 +601,12 @@
 </g>
 </svg>
     <div class="museum-items">
-        <p>济南市博物馆导览</p>
-        <ul class="museum-items-list">
-            <li ng-repeat="i in data" repeat-done="scrollline()">
-                <a ui-sref="museum.details" ng-bind-html="i.name+'<span>56万件</span>'"><span>56万件</span></a>
+        <p ng-bind="cityData[cityid.id-1].cityName+'博物馆导览'"></p>
+        <ul class="museum-items-list" >
+            <li ng-repeat="i in cityData[cityid.id-1].museum">
+				<!--repeat-done="scrollline()"-->
+                <a ui-sref="museum.details({id:i.id})"><span ng-bind="i.name"> </span><u ng-bind="i.number"></u></a>
             </li>
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展2 <span>40万件</span></a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展3 <span>20万件</span></a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展4 <span>15万件</span></a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展5 <span>13万件</span></a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展6 <span>16万件</span></a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展7 <span>18万件</span></a>-->
-            <!--</li>-->
-            <!--<li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li><li>-->
-                <!--<a ui-sref="museum.details">吉林省博物馆书画展8 <span>14万件</span></a>-->
-            <!--</li>-->
         </ul>
     </div>
 </div>
