--- a/css/collection.css
+++ b/css/collection.css
@@ -288,6 +288,24 @@ span.emotion:hover {
 .PagePlugs {
   text-align: center; }
 
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+  width: 5px; }
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 5px; }
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #008582; }
+
 .collection-wraper {
   padding: 0 20px 0;
   /*筛选条件*/
