--- a/css/museum.css
+++ b/css/museum.css
@@ -288,6 +288,24 @@ span.emotion:hover {
 .PagePlugs {
   text-align: center; }
 
+/* 设置滚动条的样式 */
+::-webkit-scrollbar {
+  width: 5px; }
+
+/* 滚动槽 */
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border-radius: 5px; }
+
+/* 滚动条滑块 */
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
+
+::-webkit-scrollbar-thumb:window-inactive {
+  background: #008582; }
+
 .museum-details {
   padding: 10px 83px 0;
   display: -webkit-box;
@@ -488,10 +506,20 @@ span.emotion:hover {
       width: 285px;
       height: 300px;
       overflow: auto; }
-      .museum-map .museum-items ul li {
-        text-align: center; }
-        .museum-map .museum-items ul li a {
-          line-height: 30px; }
+      .museum-map .museum-items ul li a {
+        line-height: 30px;
+        display: flex;
+        flex-flow: row; }
+        .museum-map .museum-items ul li a span {
+          display: -webkit-box;
+          -webkit-box-orient: vertical;
+          -webkit-line-clamp: 1;
+          overflow: hidden;
+          width: 200px;
+          padding-left: 20px; }
+        .museum-map .museum-items ul li a u {
+          padding-left: 10px;
+          text-decoration: none; }
 
 .museum-details-morecollection-title {
   padding: 10px 15px 0px 83px;
