修改接口之后需要修改的页面，主页轮播图

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,9 @@
 .wrapper {
   padding-bottom: 14px; }
 
+.slider {
+  height: 455px; }
+
 .section-title {
   color: #008582;
   margin-bottom: 22px;
