--- a/css/index.scss
+++ b/css/index.scss
@@ -3,6 +3,9 @@ $theme-color-active:#ea703a;
 .wrapper{
   padding-bottom:14px;
 }
+.slider{
+  height:455px;
+}
 .section-title{
   color:$theme-color;
   margin-bottom:22px;
