--- a/template/museumDetails.html
+++ b/template/museumDetails.html
@@ -81,7 +81,7 @@
     </div>
     <div class="museum-details-collection">
         <p class="museum-details-title">
-            馆内藏品 <a ui-sref="collection({museum:'济南市博物馆',type:'文物藏品'})">更多 &Gt;</a>
+            馆内藏品 <a ui-sref="collection({museum:'济南市博物馆',type:'文物藏品',id:'1'})">更多 &Gt;</a>
         </p>
         <ul>
             <li>
@@ -135,7 +135,7 @@
     </div>
     <div class="museum-details-display">
         <p class="museum-details-title">
-            展览 <a ui-sref="display({museum:'济南市博物馆'})">更多 &Gt;</a>
+            展览 <a ui-sref="display({museum:'济南市博物馆',id:'2'})">更多 &Gt;</a>
         </p>
         <div class="museum-details-display-content">
             <a href=""><img src="img/展览-博物馆_03.png" alt=""></a>
@@ -160,7 +160,7 @@
                 <h6>
                     汉代画像艺术展
                 </h6>
-                <a ui-sref="digitization({museum:'济南省博物馆'})">更多 &Gt;</a>
+                <a ui-sref="digitization({museum:'济南省博物馆',id:'2'})">更多 &Gt;</a>
             </div>
         </div>
     </div>
