--- a/css/common.scss
+++ b/css/common.scss
@@ -305,22 +305,22 @@ span.emotion:hover {
 
 /* 设置滚动条的样式 */
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 2px;
 }
 
 /* 滚动槽 */
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 5px;
+  border-radius: 2px;
 }
 
 /* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
-  border-radius: 5px;
+  border-radius: 2px;
   background: rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5);
+  -webkit-box-shadow: inset 0 0 6px $theme-color;
 }
 
 ::-webkit-scrollbar-thumb:window-inactive {
-  background: $theme-color;
+  background:$theme-color;
 }
