--- a/css/display.css
+++ b/css/display.css
@@ -290,18 +290,18 @@ span.emotion:hover {
 
 /* 设置滚动条的样式 */
 ::-webkit-scrollbar {
-  width: 5px; }
+  width: 2px; }
 
 /* 滚动槽 */
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-  border-radius: 5px; }
+  border-radius: 2px; }
 
 /* 滚动条滑块 */
 ::-webkit-scrollbar-thumb {
-  border-radius: 5px;
+  border-radius: 2px;
   background: rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.5); }
+  -webkit-box-shadow: inset 0 0 6px #008582; }
 
 ::-webkit-scrollbar-thumb:window-inactive {
   background: #008582; }
@@ -450,7 +450,8 @@ span.emotion:hover {
     -ms-flex-wrap: wrap;
     flex-wrap: wrap; }
     .display-content .display-list-content-inner ul li {
-      margin-bottom: 10px; }
+      margin-bottom: 10px;
+      width: 298px; }
       .display-content .display-list-content-inner ul li:not(:nth-child(3n)) {
         margin-right: 70px; }
       .display-content .display-list-content-inner ul li h1 {
@@ -476,7 +477,6 @@ span.emotion:hover {
         margin-top: 8px;
         font-size: 12px;
         color: #8e8e8e;
-        width: 240px;
         line-height: 20px;
         display: -webkit-box;
         -webkit-box-orient: vertical;
