--- a/template/collection.html
+++ b/template/collection.html
@@ -6,7 +6,6 @@
             <button style="margin-left:343px" class="active" ng-click="tabChange($event)" ng-show="showbtn">文物藏品</button>
             <button style="margin-left:16px;" ng-click="tabChange($event)" ng-show="showbtn">标本化石</button>
         </div>
-
         </p>
         <div class="collection-wraper" ng-if="isSelectedRelic" ng-controller="CollectionRelic">
             <div class="slected-condition" ng-if="isSelected">
@@ -19,18 +18,18 @@
 
                     <li ng-if="isUnitshow">
                         <small>单位：</small>
-                        <u ng-bind="selectedcondition.unit"></u>
+                        <u ng-bind="selected.unit"></u>
                         <i ng-click="removeUnit()" ng-show="remove">×</i>
                     </li>
 
                     <li ng-if="isYear">
                         <small>年代：</small>
-                        <u ng-bind="selectedcondition.year"></u>
+                        <u ng-bind="selected.year"></u>
                         <i ng-click="removeCondition('isYear','year')">×</i>
                     </li>
                     <li ng-if="isClassify">
                         <small>分类：</small>
-                        <u ng-bind="selectedcondition.classify"></u>
+                        <u ng-bind="selected.classify"></u>
                         <i ng-click="removeCondition('isClassify','classify')">×</i>
                     </li>
                     <li ng-if="isKey">
@@ -55,7 +54,7 @@
                     <p class="condition-title fontB">藏品分类：</p>
                     <ul class="condition-content">
                         <li ng-repeat="i in data.ccList">
-                            <span ng-click="getConditions('isClassify','classify',$event)" ng-bind="i.name"></span>
+                            <span ng-click="getConditions('isClassify','classify',$event)" data-id="{{i.id}}" ng-bind="i.name"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -88,7 +87,7 @@
                     <p class="condition-title fontB">所属年代：</p>
                     <ul class="condition-content">
                         <li ng-repeat="x in data.ytList">
-                            <span ng-click="getConditions('isYear','year',$event)" ng-bind="x.name"></span>
+                            <span ng-click="getConditions('isYear','year',$event)" data-id="{{x.id}}" ng-bind="x.name"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -126,22 +125,22 @@
                     </li>
                     <li ng-if="isUnitshow">
                         <small>单位：</small>
-                        <u ng-bind="selectedcondition.unit"></u>
+                        <u ng-bind="selected.unit"></u>
                         <i ng-click="removeUnit()" ng-show="remove">×</i>
                     </li>
                     <li ng-if="isYear">
                         <small>年代：</small>
-                        <u ng-bind="selectedcondition.year"></u>
+                        <u ng-bind="selected.year"></u>
                         <i ng-click="removeCondition('isYear','year')">×</i>
                     </li>
                     <li ng-if="isClassify">
                         <small>分类：</small>
-                        <u ng-bind="selectedcondition.classify"></u>
+                        <u ng-bind="selected.classify"></u>
                         <i ng-click="removeCondition('isClassify','classify')">×</i>
                     </li>
                     <li ng-if="isKey">
                         <small>关键词：</small>
-                        <u ng-bind="selectedcondition.keyword"></u>
+                        <u ng-bind="selected.keyword"></u>
                         <i ng-click="hideKeyword('isKey','keyword')">×</i>
                     </li>
                 </ul>
@@ -161,7 +160,7 @@
                     <p class="condition-title fontB">藏品分类：</p>
                     <ul class="condition-content">
                         <li ng-repeat="i in data.ccList">
-                            <span ng-click="getConditions('isClassify','classify',$event)" ng-bind="i.name"></span>
+                            <span ng-click="getConditions('isClassify','classify',$event)" ng-bind="i.name" data-id="{{i.id}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -194,7 +193,7 @@
                     <p class="condition-title fontB">所属年代：</p>
                     <ul class="condition-content">
                         <li ng-repeat="x in data.ytList">
-                            <span ng-click="getConditions('isYear','year',$event)" ng-bind="x.pathName"></span>
+                            <span ng-click="getConditions('isYear','year',$event)" ng-bind="x.pathName" data-id="{{x.id}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
