--- a/template/display.html
+++ b/template/display.html
@@ -48,7 +48,7 @@
                     <p class="condition-title fontB">收藏单位：</p>
                     <ul class="condition-content">
                         <li ng-repeat="r in conditionData[index].museums">
-                            <span ng-click="getArea($event)" ng-bind="r.shortname"></span>
+                            <span ng-click="getArea($event)" ng-bind="r.shortname" data-id="{{r.id}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -134,7 +134,7 @@
                     <p class="condition-title fontB">收藏单位：</p>
                     <ul class="condition-content">
                         <li ng-repeat="r in conditionData[index].museums">
-                            <span ng-click="getArea($event)" ng-bind="r.shortname"></span>
+                            <span ng-click="getArea($event)" ng-bind="r.shortname"  data-id="{{r.id}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -205,7 +205,7 @@
                     <p class="condition-title fontB">收藏单位：</p>
                     <ul class="condition-content">
                         <li ng-repeat="r in conditionData[index].museums">
-                            <span ng-click="getArea($event)" ng-bind="r.shortname"></span>
+                            <span ng-click="getArea($event)" ng-bind="r.shortname" data-id="{{r.id}}"></span>
                         </li>
                     </ul>
                     <div class="condition-more" ng-click="SlideDown($event)">更多<span>&gt;</span></div>
@@ -221,24 +221,9 @@
                     </li>
                 </ul>
             </div>
-            <div class="display-list-content-inner" ng-show="tabsubpage===1">
+            <div class="display-list-content-inner">
                 <ul>
                     <li ng-repeat='x in nDatalist'>
-                        <a ui-sref="displaydetails({type:'inner',id:2})" target="_blank">
-                            <img ng-src="{{x.picture}}" width="298" height="165" alt="{{x.headline}}">
-                        </a>
-                        <h1 ng-bind="x.headline"></h1>
-                        <h5 ng-if="x.beginTime"><i ng-class="{displaypermanent:!x.beginTime}"></i><span ng-show="x.beginTime"><s ng-bind="x.beginTime|date : 'yyyy/MM/dd'"></s>--<s ng-bind="x.endTime |date : 'yyyy/MM/dd'"></s></span><span ng-show="!x.beginTime">常设展览</span></h5>
-                        <h6><i class="displaytime"></i><span ng-bind="x.musExhibition"></span></h6>
-                        <p ng-bind="x.content">
-                        </p>
-                    </li>
-                </ul>
-                <div class="PagePlugs" style="margin-top:15px"></div>
-            </div>
-            <div class="display-list-content-inner" ng-show="tabsubpage===0">
-                <ul>
-                    <li ng-repeat='x in pDatalist| filter:{}'>
                         <a ui-sref="displaydetails({type:'inner',id:2})" target="_blank">
                             <img ng-src="{{x.picture}}" width="298" height="165" alt="{{x.headline}}">
                         </a>
