--- a/template/digitization.html
+++ b/template/digitization.html
@@ -20,29 +20,11 @@
                 <li class="digization-list-item-infor">
                     <div>
                         <h1 ng-bind="item.viName"></h1>
-                        <p ng-bind="item.viIntro"></p>
+                        <p ng-bind="item.viIntro" class="hide" ng-mouseover="showMore($event)" ng-mouseleave="hide($event)"></p>
                     </div>
                 </li>
             </ul>
         </li>
         <div class="PagePlugs" style="margin:30px 0;"></div>
     </ul>
-    <!--<ul class="digization-list" ng-show="tabpage==1">-->
-        <!--<li class="digization-list-item" ng-repeat="item in data |limitTo: 3">-->
-            <!--<ul>-->
-                <!--<li class="digization-list-item-img">-->
-                    <!--<a ng-href="{{item.viPCUrl}}">-->
-                        <!--<img ng-src="{{item.viMasterMap}}" width="449" height="253" alt="{{item.viName}}">-->
-                    <!--</a>-->
-                <!--</li>-->
-                <!--<li class="digization-list-item-infor">-->
-                    <!--<div>-->
-                        <!--<h1 ng-bind="item.viName"></h1>-->
-                        <!--<p ng-bind="item.viIntro"></p>-->
-                    <!--</div>-->
-                <!--</li>-->
-            <!--</ul>-->
-        <!--</li>-->
-        <!--<div class="PagePlugs" style="margin:30px 0;"></div>-->
-    <!--</ul>-->
 </div>
